--- a/frontend/src/css/myStyle.css
+++ b/frontend/src/css/myStyle.css
@@ -1,4 +1,23 @@
+.active {
+    background-color: #FDEC94;
+}
+
+@media screen and (max-width: 700px) {
+    #buyersCard {
+        width: 100%;
+    }
+
+    /* #textBoxForm {
+        width: 60vw;
+    } */
+    #textBoxButton {
+        width: 45vw;
+        font-size: 0.7em;
+    }
+}
+
 @media screen and (max-width: 1000px) {
+
     .searchFilters {
         overflow-x: auto;
         overflow-y: hidden;
@@ -8,23 +27,39 @@
         font-size: 0.8em;
     }
 
-    #textBoxForm {
+    /* #textBoxForm {
         width: 60vw;
     }
     #textBoxButton {
         width: 20vw;
         font-size: 0.7em;
+    } */
+}
+
+@media screen and (min-width: 701px) and (max-width: 1000px) {
+
+    #buyersCard {
+        width: 47%;
     }
 
 }
 
 @media screen and (min-width: 1001px) {
+
+    .searchFilters {
+        width: 80%;
+    }
+
     #textBoxForm {
         width: 49vw;
     }
     #textBoxButton {
         font-size: 0.9em;
         width: 15vw;
+    }
+
+    #buyersCard {
+        width: 30%;
     }
 }
 
